src/objects/StudentTerm__c.object
<CustomObject>
    <description>Instance of a student period of time, using recordtype to designate between academic terms, term breaks, withdraw/drops, etc.</description>
    <fields>
        <fullName>ApprovalDateTime__c</fullName>
        <description>The date and time in which the term was approved.</description>
        <label>Approval Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>The date the term was approved in relation to the dates on the courses.</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>The approval status of the term in relation to course dates</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Mentor Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval status of the term in relation to dates on courses.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompetencyUnits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the summed value of all CUs in courses assigned to the term.</description>
        <label>Competency Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CorrectTermCode__c</fullName>
        <formula>IF(Name == (TEXT(YEAR(StartDate__c)) &amp; 
IF(MONTH(StartDate__c) &lt; 10, &apos;0&apos;, NULL) &amp;
TEXT(Month(StartDate__c ))),&apos;true&apos;,
IF(OR(Name == &apos;000000&apos;,Name == &apos;111111&apos;),&apos;true&apos;,&apos;false&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CorrectTermCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date that the term ends.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The starting date of the term. WGU Terms are normally 6 months but it is possible that one may be smaller because it is a term break.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StudentDegreePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student&apos;s Degree Plan instance this term is schedule within.</description>
        <label>Student Degree Plan</label>
        <referenceTo>StudentDegreePlans__c</referenceTo>
        <relationshipLabel>Student Terms</relationshipLabel>
        <relationshipName>StudentTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Terms</relationshipLabel>
        <relationshipName>myTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermNumber__c</fullName>
        <description>The numeric term value.</description>
        <label>Term Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Term Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>